fix(SpaceList): ellipsis overflow to attachment-bottom

--- a/scss/components/space-list-item.scss
+++ b/scss/components/space-list-item.scss
@@ -125,6 +125,9 @@
               font-family: $brand-font-bold;
               font-weight: bold;
               height: rem-calc(22);
+              overflow: hidden;
+              text-overflow: ellipsis;
+              white-space: nowrap;
             }
           }
         }
